# vex-idrs.token

./: CMakeLists.txt  README.md
include/: idrs-token.hpp
ricardian/: idrs-token.contracts.md.in
src/: idrs-token.cpp
